--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <circle class="hour-circle" cx="0" cy="0" r="180" pathLength="60" />
 
     <text id="date" x="-130" y="10">00</text>
-    <text id="time" x="90" y="10">AM</text>
+    <text id="time" x="110" y="10">AM</text>
+    <text id="month" x="-10" y="130">JAN</text>
 
     <g id="hour-hand">
       <line class="hand" x1="0" y1="0" x2="0" y2="-100" />
